# Hammam-luna

./: .env.example  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: serializers.py  urls.py  views.py
apps/billing/: admin.py  apps.py  models.py  services.py
apps/booking/: admin.py  apps.py  back_urls.py  back_views.py  forms.py  models.py  services.py
apps/catalog/: admin.py  apps.py  back_urls.py  back_views.py  forms.py  models.py  product_back_urls.py  product_back_views.py
apps/core/: admin.py  apps.py  auth_urls.py  back_urls.py  context_processors.py  forms.py  front_urls.py  front_views.py  middleware.py  mixins.py  models.py  otp.py  signals.py  views.py
apps/customers/: admin.py  apps.py  forms.py  models.py
apps/dashboard/: apps.py  urls.py  views.py
apps/orders/: admin.py  apps.py  back_urls.py  back_views.py  cart.py  forms.py  models.py
apps/people/: admin.py  apps.py  back_urls.py  back_views.py  forms.py  models.py
apps/pricing/: admin.py  apps.py  back_urls.py  back_views.py  forms.py  models.py  services.py
config/: settings.py  urls.py
factories/: __init__.py
templates/: base.html
templates/auth/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html  two_factor_setup.html  two_factor_verify.html
templates/backoffice/: index.html
templates/billing/: credit_note.html  invoice.html
templates/dashboard/: index.html
tests/: test_booking.py  test_orders.py  test_pricing.py
(+32 files in other folders)
